# tahoma2d_plugins

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: linux_build.yml  macOS_build.yml  windows_build.yml
BlurConvolution/src/: main.cpp
BlurCurlNoise/src/: main.cpp
BlurMaskedC/src/: main.cpp
BlurMaskedD/src/: main.cpp
BlurMaskedR/src/: main.cpp
Dwango/BlurChromaticAberration/src/: main.cpp
Dwango/CoherentNoise/src/: main.cpp
Dwango/ComposeAdd/src/: main.cpp
Dwango/ComposeMul/src/: main.cpp
Dwango/ComposeOptical/src/: main.cpp
Dwango/Drip/src/: main.cpp
Dwango/Kaleidoscope/src/: main.cpp
Dwango/Paraffin/src/: main.cpp
Dwango/PencilHatching/src/: main.cpp
Dwango/Waveglass/src/: main.cpp
ImageQuilting/src/: main.cpp
LightBloom/src/: main.cpp
LightGlare/src/: main.cpp
LightIncident/src/: main.cpp
Tiling/src/: main.cpp
Wolf/BlurChannels/: CMakeLists.txt
Wolf/BlurChannels/src/: main.cpp
Wolf/Diffusion/: CMakeLists.txt
Wolf/Diffusion/src/: main.cpp
Wolf/LumaThreshold/: CMakeLists.txt
Wolf/LumaThreshold/src/: main.cpp
Wolf/LumaThresholdTwo/: CMakeLists.txt
Wolf/LumaThresholdTwo/src/: main.cpp
Wolf/OneChannel/: CMakeLists.txt
Wolf/OneChannel/src/: main.cpp
Wolf/Selector/: CMakeLists.txt
Wolf/Selector/src/: main.cpp
Wolf/SeparateChannels/: CMakeLists.txt
Wolf/SeparateChannels/src/: main.cpp
Wolf/Slide/: CMakeLists.txt
Wolf/Slide/src/: main.cpp
ci-scripts/linux/: Installation Instructions.txt  tahoma-build.sh  tahoma-buildopencv.sh  tahoma-buildpkg.sh  tahoma-install.sh
ci-scripts/osx/: Installation Instructions.txt  tahoma-build.sh  tahoma-buildopencv.sh  tahoma-buildpkg.sh  tahoma-install.sh
ci-scripts/windows/: Installation Instructions.txt  tahoma-build.bat  tahoma-buildpkg.bat  tahoma-install.bat
opentoonz_plugin_utility/: CMakeLists.txt
opentoonz_plugin_utility/include/: toonz_utility.hpp
opentoonz_plugin_utility/plugin_sdk/core/: toonz_plugin.h
