cmake_minimum_required(VERSION 2.4)
project(dwango_opentoonz_plugins)

if(WIN32)
    if(CMAKE_SIZEOF_VOID_P EQUAL 4)
        set(PLATFORM1 32)
        set(PLATFORM2)
    else()
        set(PLATFORM1 64)
        set(PLATFORM2 _64)
    endif()

    if(PLATFORM1 EQUAL 64)
        add_definitions(-Dx64)
    endif()

    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP /openmp")
endif(WIN32)

if(APPLE)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -stdlib=libc++")
endif(APPLE)

if(UNIX)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fPIC -fvisibility=hidden")
endif(UNIX)

find_package(OpenCV REQUIRED)
set(LIBS ${OpenCV_LIBS} opentoonz_plugin_utility) 

include_directories(opentoonz_plugin_utility/include
                    opentoonz_plugin_utility/plugin_sdk/core
                    "${OpenCV_INCLUDE_DIRS}")
link_directories("${OpenCV_LIBS}")

add_subdirectory(opentoonz_plugin_utility)
add_subdirectory(Dwango/BlurChromaticAberration)
add_subdirectory(Dwango/BlurConvolution)
add_subdirectory(Dwango/BlurCurlNoise)
add_subdirectory(Dwango/BlurMaskedC)
add_subdirectory(Dwango/BlurMaskedD)
add_subdirectory(Dwango/BlurMaskedR)
add_subdirectory(Dwango/CoherentNoise)
add_subdirectory(Dwango/ComposeAdd)
add_subdirectory(Dwango/ComposeMul)
add_subdirectory(Dwango/ComposeOptical)
add_subdirectory(Dwango/Drip)
add_subdirectory(Dwango/ImageQuilting)
add_subdirectory(Dwango/Kaleidoscope)
add_subdirectory(Dwango/LightBloom)
add_subdirectory(Dwango/LightGlare)
add_subdirectory(Dwango/LightIncident)
add_subdirectory(Dwango/Paraffin)
add_subdirectory(Dwango/PencilHatching)
add_subdirectory(Dwango/Tiling)
add_subdirectory(Dwango/Waveglass)
add_subdirectory(Wolf/BlurChannels)
add_subdirectory(Wolf/Diffusion)
add_subdirectory(Wolf/LumaThreshold)
add_subdirectory(Wolf/LumaThresholdTwo)
add_subdirectory(Wolf/OneChannel)
add_subdirectory(Wolf/Selector)
add_subdirectory(Wolf/SeparateChannels)
add_subdirectory(Wolf/Slide)
